Separate application interface from daemons.

--- a/docs/getting-started/live_data_reduction.ipynb
+++ b/docs/getting-started/live_data_reduction.ipynb
@@ -52,7 +52,8 @@
    "source": [
     "from beamlime.constructors import multiple_constant_providers\n",
     "from beamlime.applications.handlers import ImagePath\n",
-    "from beamlime.executables.prototypes import Prototype, mini_prototype_factory\n",
+    "from beamlime.applications.apps import DataReductionApp\n",
+    "from beamlime.executables.prototypes import mini_prototype_factory\n",
     "from beamlime.logging import BeamlimeLogger\n",
     "from beamlime.applications._parameters import EventRate, NumPixels, NumFrames, DataFeedingSpeed\n",
     "from matplotlib import pyplot as plt\n",
@@ -72,7 +73,7 @@
     "    }\n",
     "):\n",
     "    prototype_factory[BeamlimeLogger].setLevel(logging.INFO)\n",
-    "    app = prototype_factory[Prototype]\n",
+    "    app = prototype_factory[DataReductionApp]\n",
     "    app.run()\n",
     "    plt.close()  # Close the plot from this cell.\n"
    ]
