Update interface class names, docstring and documentation.

--- a/docs/getting-started/live_data_reduction.ipynb
+++ b/docs/getting-started/live_data_reduction.ipynb
@@ -65,7 +65,7 @@
     "    prototype_factory,\n",
     "    {\n",
     "        BeamlimeLogger: sc.get_logger(),\n",
-    "        DataFeedingSpeed: DataFeedingSpeed(0.1),\n",
+    "        DataFeedingSpeed: DataFeedingSpeed(1),\n",
     "        EventRate: EventRate(10_000),\n",
     "        NumPixels: NumPixels(10_000),\n",
     "        NumFrames: NumFrames(140),\n",
@@ -84,7 +84,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def show_figure():\n",
+    "import asyncio\n",
+    "\n",
+    "async def show_figure():\n",
     "    \"\"\"Wait for the figure to be created and then show it.\"\"\"\n",
     "    shown = False\n",
     "    tried = 0\n",
@@ -93,13 +95,12 @@
     "            tried += 1\n",
     "            assert hasattr(app.data_reduction_handler, 'figure')\n",
     "            shown = True\n",
-    "        except (AttributeError, AssertionError):\n",
-    "            import time\n",
-    "            time.sleep(0.1)\n",
+    "        except (AttributeError, AssertionError):        \n",
+    "            await asyncio.sleep(0.1)\n",
     "\n",
     "    return app.data_reduction_handler.figure\n",
     "\n",
-    "show_figure()"
+    "await show_figure()"
    ]
   }
  ],
