Remove abstract application class layer and move documentation.

--- a/docs/getting-started/live_data_reduction.ipynb
+++ b/docs/getting-started/live_data_reduction.ipynb
@@ -52,15 +52,15 @@
    "source": [
     "from beamlime.constructors import multiple_constant_providers\n",
     "from beamlime.applications.handlers import ImagePath\n",
-    "from beamlime.applications.apps import DataReductionApp\n",
-    "from beamlime.executables.prototypes import mini_prototype_factory\n",
+    "from beamlime.applications.base import Application\n",
+    "from beamlime.executables.prototypes import default_prototype_factory\n",
     "from beamlime.logging import BeamlimeLogger\n",
     "from beamlime.applications._parameters import EventRate, NumPixels, NumFrames, DataFeedingSpeed\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
     "import logging, pathlib\n",
     "\n",
-    "prototype_factory = mini_prototype_factory()\n",
+    "prototype_factory = default_prototype_factory()\n",
     "with multiple_constant_providers(\n",
     "    prototype_factory,\n",
     "    {\n",
@@ -73,7 +73,7 @@
     "    }\n",
     "):\n",
     "    prototype_factory[BeamlimeLogger].setLevel(logging.INFO)\n",
-    "    app = prototype_factory[DataReductionApp]\n",
+    "    app = prototype_factory[Application]\n",
     "    app.run()\n",
     "    plt.close()  # Close the plot from this cell.\n"
    ]
