Fix typo and update documented example according to the change.

--- a/docs/getting-started/live_data_reduction.ipynb
+++ b/docs/getting-started/live_data_reduction.ipynb
@@ -50,8 +50,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from beamlime.constructors import multiple_constant_providers\n",
-    "from beamlime.applications.handlers import ImagePath\n",
+    "from beamlime.constructors import multiple_constant_providers, SingletonProvider\n",
+    "from beamlime.applications.handlers import ImagePath, DataReductionHandler, RawDataSent, HistogramUpdated, PlotSaver\n",
+    "from beamlime.applications.daemons import DataStreamSimulator\n",
     "from beamlime.applications.base import Application\n",
     "from beamlime.executables.prototypes import default_prototype_factory\n",
     "from beamlime.logging import BeamlimeLogger\n",
@@ -61,6 +62,11 @@
     "import logging, pathlib\n",
     "\n",
     "prototype_factory = default_prototype_factory()\n",
+    "# Replace the default data reduction handler provider with a singleton provider.\n",
+    "# So that we can access to the figure that it is using to plot the histogram.\n",
+    "prototype_factory.providers.pop(DataReductionHandler)  # Remove the default handler.\n",
+    "prototype_factory.providers[DataReductionHandler] = SingletonProvider(DataReductionHandler)\n",
+    "\n",
     "with multiple_constant_providers(\n",
     "    prototype_factory,\n",
     "    {\n",
@@ -73,7 +79,19 @@
     "    }\n",
     "):\n",
     "    prototype_factory[BeamlimeLogger].setLevel(logging.INFO)\n",
+    "\n",
+    "    # Build the application\n",
     "    app = prototype_factory[Application]\n",
+    "    # Register Handlers\n",
+    "    plot_saver = prototype_factory[PlotSaver]\n",
+    "    app.register_handling_method(HistogramUpdated, plot_saver.save_histogram)\n",
+    "    data_reduction_handler = prototype_factory[DataReductionHandler]\n",
+    "    app.register_handling_method(\n",
+    "        RawDataSent, data_reduction_handler.process_message\n",
+    "    )\n",
+    "    # Register Daemons\n",
+    "    app.register_daemon(prototype_factory[DataStreamSimulator])\n",
+    "\n",
     "    app.run()\n",
     "    plt.close()  # Close the plot from this cell.\n"
    ]
@@ -93,12 +111,12 @@
     "    while not shown and (tried < 300):\n",
     "        try:\n",
     "            tried += 1\n",
-    "            assert hasattr(app.data_reduction_handler, 'figure')\n",
+    "            assert hasattr(data_reduction_handler, 'figure')\n",
     "            shown = True\n",
     "        except (AttributeError, AssertionError):        \n",
     "            await asyncio.sleep(0.1)\n",
     "\n",
-    "    return app.data_reduction_handler.figure\n",
+    "    return data_reduction_handler.figure\n",
     "\n",
     "await show_figure()"
    ]
