Move visualization part to plot handler.

--- a/docs/getting-started/live_data_reduction.ipynb
+++ b/docs/getting-started/live_data_reduction.ipynb
@@ -51,7 +51,7 @@
    "outputs": [],
    "source": [
     "from beamlime.constructors import multiple_constant_providers, SingletonProvider\n",
-    "from beamlime.applications.handlers import ImagePath, DataReductionHandler, RawDataSent, HistogramUpdated, PlotSaver\n",
+    "from beamlime.applications.handlers import ImagePath, DataReductionHandler, RawDataSent, HistogramUpdated, PlotStreamer\n",
     "from beamlime.applications.daemons import DataStreamSimulator\n",
     "from beamlime.applications.base import Application\n",
     "from beamlime.executables.prototypes import default_prototype_factory\n",
@@ -64,14 +64,14 @@
     "prototype_factory = default_prototype_factory()\n",
     "# Replace the default data reduction handler provider with a singleton provider.\n",
     "# So that we can access to the figure that it is using to plot the histogram.\n",
-    "prototype_factory.providers.pop(DataReductionHandler)  # Remove the default handler.\n",
-    "prototype_factory.providers[DataReductionHandler] = SingletonProvider(DataReductionHandler)\n",
+    "prototype_factory.providers.pop(PlotStreamer)  # Remove the default handler.\n",
+    "prototype_factory.providers[PlotStreamer] = SingletonProvider(PlotStreamer)\n",
     "\n",
     "with multiple_constant_providers(\n",
     "    prototype_factory,\n",
     "    {\n",
     "        BeamlimeLogger: sc.get_logger(),\n",
-    "        DataFeedingSpeed: DataFeedingSpeed(1),\n",
+    "        DataFeedingSpeed: DataFeedingSpeed(0.1),\n",
     "        EventRate: EventRate(10_000),\n",
     "        NumPixels: NumPixels(10_000),\n",
     "        NumFrames: NumFrames(140),\n",
@@ -83,8 +83,8 @@
     "    # Build the application\n",
     "    app = prototype_factory[Application]\n",
     "    # Register Handlers\n",
-    "    plot_saver = prototype_factory[PlotSaver]\n",
-    "    app.register_handling_method(HistogramUpdated, plot_saver.save_histogram)\n",
+    "    plot_saver = prototype_factory[PlotStreamer]\n",
+    "    app.register_handling_method(HistogramUpdated, plot_saver.update_histogram)\n",
     "    data_reduction_handler = prototype_factory[DataReductionHandler]\n",
     "    app.register_handling_method(\n",
     "        RawDataSent, data_reduction_handler.process_message\n",
@@ -102,23 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import asyncio\n",
-    "\n",
-    "async def show_figure():\n",
-    "    \"\"\"Wait for the figure to be created and then show it.\"\"\"\n",
-    "    shown = False\n",
-    "    tried = 0\n",
-    "    while not shown and (tried < 300):\n",
-    "        try:\n",
-    "            tried += 1\n",
-    "            assert hasattr(data_reduction_handler, 'figure')\n",
-    "            shown = True\n",
-    "        except (AttributeError, AssertionError):        \n",
-    "            await asyncio.sleep(0.1)\n",
-    "\n",
-    "    return data_reduction_handler.figure\n",
-    "\n",
-    "await show_figure()"
+    "plot_saver.figure"
    ]
   }
  ],
