Update example notebook.

--- a/docs/getting-started/live_data_reduction.ipynb
+++ b/docs/getting-started/live_data_reduction.ipynb
@@ -51,7 +51,7 @@
    "outputs": [],
    "source": [
     "from beamlime.constructors import multiple_constant_providers, SingletonProvider\n",
-    "from beamlime.applications.handlers import ImagePath, DataReductionHandler, RawDataSent, HistogramUpdated, PlotStreamer\n",
+    "from beamlime.applications.handlers import ImagePath, DataReductionHandler, RawDataSent, UpdateHistogram, PlotStreamer\n",
     "from beamlime.applications.daemons import DataStreamSimulator\n",
     "from beamlime.applications.base import Application\n",
     "from beamlime.executables.prototypes import default_prototype_factory\n",
@@ -84,7 +84,7 @@
     "    app = prototype_factory[Application]\n",
     "    # Register Handlers\n",
     "    plot_saver = prototype_factory[PlotStreamer]\n",
-    "    app.register_handling_method(HistogramUpdated, plot_saver.update_histogram)\n",
+    "    app.register_handling_method(UpdateHistogram, plot_saver.update_histogram)\n",
     "    data_reduction_handler = prototype_factory[DataReductionHandler]\n",
     "    app.register_handling_method(\n",
     "        RawDataSent, data_reduction_handler.process_message\n",
