--- a/docs/getting-started/live_data_reduction.ipynb
+++ b/docs/getting-started/live_data_reduction.ipynb
@@ -51,8 +51,8 @@
    "outputs": [],
    "source": [
     "from beamlime.constructors import multiple_constant_providers, SingletonProvider\n",
-    "from beamlime.applications.handlers import ImagePath, DataReductionHandler, RawDataSent, UpdateHistogram, PlotStreamer\n",
-    "from beamlime.applications.daemons import DataStreamSimulator\n",
+    "from beamlime.applications.handlers import ImagePath, DataReductionHandler, UpdateHistogram, PlotStreamer\n",
+    "from beamlime.applications.daemons import DataStreamSimulator, RawDataSent\n",
     "from beamlime.applications.base import Application\n",
     "from beamlime.executables.prototypes import default_prototype_factory\n",
     "from beamlime.logging import BeamlimeLogger\n",
