--- a/docs/getting-started/live_data_reduction.ipynb
+++ b/docs/getting-started/live_data_reduction.ipynb
@@ -51,8 +51,8 @@
    "outputs": [],
    "source": [
     "from beamlime.constructors import multiple_constant_providers, SingletonProvider\n",
-    "from beamlime.applications.handlers import ImagePath, DataReductionHandler, UpdateHistogram, PlotStreamer\n",
-    "from beamlime.applications.daemons import DataStreamSimulator, RawDataSent\n",
+    "from beamlime.applications.handlers import ImagePath, DataReductionHandler, UpdateAHistogram, UpdateBHistogram, PlotStreamer\n",
+    "from beamlime.applications.daemons import DataStreamSimulator, EventDataSent, LogSent\n",
     "from beamlime.applications.base import Application\n",
     "from beamlime.executables.prototypes import default_prototype_factory\n",
     "from beamlime.logging import BeamlimeLogger\n",
@@ -84,10 +84,14 @@
     "    app = prototype_factory[Application]\n",
     "    # Register Handlers\n",
     "    plot_saver = prototype_factory[PlotStreamer]\n",
-    "    app.register_handling_method(UpdateHistogram, plot_saver.update_histogram)\n",
+    "    app.register_handling_method(UpdateAHistogram, plot_saver.update_histogram)\n",
+    "    app.register_handling_method(UpdateBHistogram, plot_saver.update_histogram)\n",
     "    data_reduction_handler = prototype_factory[DataReductionHandler]\n",
     "    app.register_handling_method(\n",
-    "        RawDataSent, data_reduction_handler.process_message\n",
+    "        EventDataSent, data_reduction_handler.process_events\n",
+    "    )\n",
+    "    app.register_handling_method(\n",
+    "        LogSent, data_reduction_handler.process_log\n",
     "    )\n",
     "    # Register Daemons\n",
     "    app.register_daemon(prototype_factory[DataStreamSimulator])\n",
