--- a/docs/getting-started/live_data_reduction.ipynb
+++ b/docs/getting-started/live_data_reduction.ipynb
@@ -51,12 +51,23 @@
    "outputs": [],
    "source": [
     "from beamlime.constructors import multiple_constant_providers, SingletonProvider\n",
-    "from beamlime.applications.handlers import ImagePath, DataReductionHandler, RawDataSent, UpdateHistogram, PlotStreamer\n",
+    "from beamlime.applications.handlers import (\n",
+    "    ImagePath,\n",
+    "    DataReductionHandler,\n",
+    "    RawDataSent,\n",
+    "    WorkflowResultUpdate,\n",
+    "    PlotStreamer,\n",
+    ")\n",
     "from beamlime.applications.daemons import DataStreamSimulator\n",
     "from beamlime.applications.base import Application\n",
     "from beamlime.executables.prototypes import default_prototype_factory\n",
     "from beamlime.logging import BeamlimeLogger\n",
-    "from beamlime.applications._parameters import EventRate, NumPixels, NumFrames, DataFeedingSpeed\n",
+    "from beamlime.applications._parameters import (\n",
+    "    EventRate,\n",
+    "    NumPixels,\n",
+    "    NumFrames,\n",
+    "    DataFeedingSpeed,\n",
+    ")\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
     "import logging, pathlib\n",
@@ -76,7 +87,7 @@
     "        NumPixels: NumPixels(10_000),\n",
     "        NumFrames: NumFrames(140),\n",
     "        ImagePath: ImagePath(pathlib.Path('./beamlime_plot.png')),\n",
-    "    }\n",
+    "    },\n",
     "):\n",
     "    prototype_factory[BeamlimeLogger].setLevel(logging.INFO)\n",
     "\n",
@@ -84,16 +95,14 @@
     "    app = prototype_factory[Application]\n",
     "    # Register Handlers\n",
     "    plot_saver = prototype_factory[PlotStreamer]\n",
-    "    app.register_handling_method(UpdateHistogram, plot_saver.update_histogram)\n",
+    "    app.register_handling_method(WorkflowResultUpdate, plot_saver.update_histogram)\n",
     "    data_reduction_handler = prototype_factory[DataReductionHandler]\n",
-    "    app.register_handling_method(\n",
-    "        RawDataSent, data_reduction_handler.process_message\n",
-    "    )\n",
+    "    app.register_handling_method(RawDataSent, data_reduction_handler.process_message)\n",
     "    # Register Daemons\n",
     "    app.register_daemon(prototype_factory[DataStreamSimulator])\n",
     "\n",
     "    app.run()\n",
-    "    plt.close()  # Close the plot from this cell.\n"
+    "    plt.close()  # Close the plot from this cell."
    ]
   },
   {
@@ -102,7 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_saver.figure"
+    "next(iter(plot_saver.figures.values()))"
    ]
   }
  ],
@@ -122,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
