--- a/docs/getting-started/live_data_reduction.ipynb
+++ b/docs/getting-started/live_data_reduction.ipynb
@@ -68,6 +68,7 @@
     "    NumFrames,\n",
     "    DataFeedingSpeed,\n",
     ")\n",
+    "from beamlime.stateless_workflow import Workflow\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
     "import logging, pathlib\n",
@@ -87,6 +88,7 @@
     "        NumPixels: NumPixels(10_000),\n",
     "        NumFrames: NumFrames(140),\n",
     "        ImagePath: ImagePath(pathlib.Path('./beamlime_plot.png')),\n",
+    "        Workflow: 'dummy',\n",
     "    },\n",
     "):\n",
     "    prototype_factory[BeamlimeLogger].setLevel(logging.INFO)\n",
@@ -131,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
