--- a/docs/user-guide/live_data_reduction.ipynb
+++ b/docs/user-guide/live_data_reduction.ipynb
@@ -53,11 +53,10 @@
     "from beamlime.constructors import multiple_constant_providers, SingletonProvider\n",
     "from beamlime.applications.handlers import (\n",
     "    DataReductionHandler,\n",
-    "    RawDataSent,\n",
     "    WorkflowResultUpdate,\n",
     "    PlotStreamer,\n",
     ")\n",
-    "from beamlime.applications.daemons import DataStreamSimulator\n",
+    "from beamlime.applications.daemons import DataStreamSimulator, RawDataSent\n",
     "from beamlime.applications.base import Application\n",
     "from beamlime.executables.prototypes import default_prototype_factory\n",
     "from beamlime.logging import BeamlimeLogger\n",
