Add instructions for adding workflow plugins

--- a/docs/user-guide/getting-started.ipynb
+++ b/docs/user-guide/getting-started.ipynb
@@ -32,6 +32,42 @@
     "\n",
     "![Plot of reduction result](reduction-result-random-counts.png)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Adding workflows\n",
+    "\n",
+    "Python packages can add workflows as plugins to Beamlime.\n",
+    "To do this, create a Python package with a `beamlime.stateless` entry point in the `pyproject.toml` file.\n",
+    "This is how the \"dummy\" workflow is added to Beamlime:\n",
+    "\n",
+    "```python\n",
+    "# In beamlime's pyproject.toml\n",
+    "[project.entry-points.\"beamlime.stateless\"]\n",
+    "dummy = \"beamlime.stateless_workflow:dummy_workflow\"\n",
+    "```\n",
+    "\n",
+    "Above, 'dummy' is the name of the workflow (which can then be passed to `beamlime --workflow`), and 'beamlime.stateless_workflow' is the name of the Python package and module containing the workflow.\n",
+    "As an example, for a Loki workflow plugin provided by `esssans`, the entry point might look as follows:\n",
+    "\n",
+    "```python\n",
+    "# In esssans' pyproject.toml\n",
+    "[project.entry-points.\"beamlime.stateless\"]\n",
+    "ess-loki = \"ess.sans.loki:live_workflow\"\n",
+    "```\n",
+    "\n",
+    "where `live_workflow` must adhere to the `beamlime.StatelessWorkflow` protocol:\n",
+    "\n",
+    "```python\n",
+    "class StatelessWorkflow(Protocol):\n",
+    "    def __call__(self, group: JSONGroup) -> WorkflowResult:\n",
+    "        pass\n",
+    "```\n",
+    "\n",
+    "This can be fulfilled by a class or a function, as long as it takes a `JSONGroup` and returns a `WorkflowResult`."
+   ]
   }
  ],
  "metadata": {
