Fix toc and add api reference

--- a/docs/user-guide/getting-started.ipynb
+++ b/docs/user-guide/getting-started.ipynb
@@ -58,15 +58,27 @@
     "ess-loki = \"ess.sans.loki:live_workflow\"\n",
     "```\n",
     "\n",
-    "where `live_workflow` must adhere to the `beamlime.StatelessWorkflow` protocol:\n",
+    "where `live_workflow` must adhere to the [beamlime.StatelessWorkflow](https://scipp.github.io/beamlime/generated/classes/beamlime.StatelessWorkflow.html) protocol:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import inspect\n",
     "\n",
-    "```python\n",
-    "class StatelessWorkflow(Protocol):\n",
-    "    def __call__(self, group: JSONGroup) -> WorkflowResult:\n",
-    "        pass\n",
-    "```\n",
+    "from beamlime import StatelessWorkflow\n",
     "\n",
-    "This can be fulfilled by a class or a function, as long as it takes a `JSONGroup` and returns a `WorkflowResult`."
+    "print(inspect.getsource(StatelessWorkflow))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This can be fulfilled by a class or a function, as long as it takes a `JSONGroup` and returns a [beamlime.WorkflowResult](https://scipp.github.io/beamlime/generated/classes/beamlime.WorkflowResult.html)."
    ]
   }
  ],
