tests: add tests + pytest-async dependency

--- a/docs/user-guide/live_data_reduction.ipynb
+++ b/docs/user-guide/live_data_reduction.ipynb
@@ -37,6 +37,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!micromamba install -y ipympl\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%matplotlib widget\n",
     "import scipp as sc\n",
     "\n",
@@ -82,7 +91,7 @@
     "    prototype_factory,\n",
     "    {\n",
     "        BeamlimeLogger: sc.get_logger(),\n",
-    "        DataFeedingSpeed: DataFeedingSpeed(0.1),\n",
+    "        DataFeedingSpeed: DataFeedingSpeed(1),\n",
     "        EventRate: EventRate(10_000),\n",
     "        NumPixels: NumPixels(10_000),\n",
     "        NumFrames: NumFrames(140),\n",
