--- a/docs/user-guide/live_data_reduction.ipynb
+++ b/docs/user-guide/live_data_reduction.ipynb
@@ -37,15 +37,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!micromamba install -y ipympl\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "%matplotlib widget\n",
     "import scipp as sc\n",
     "\n",
@@ -61,6 +52,7 @@
    "source": [
     "from beamlime.constructors import multiple_constant_providers, SingletonProvider\n",
     "from beamlime.applications.handlers import (\n",
+    "    ImagePath,\n",
     "    DataReductionHandler,\n",
     "    RawDataSent,\n",
     "    WorkflowResultUpdate,\n",
@@ -76,10 +68,9 @@
     "    NumFrames,\n",
     "    DataFeedingSpeed,\n",
     ")\n",
-    "from beamlime.stateless_workflow import Workflow\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
-    "import logging\n",
+    "import logging, pathlib\n",
     "\n",
     "prototype_factory = default_prototype_factory()\n",
     "# Replace the default data reduction handler provider with a singleton provider.\n",
@@ -91,11 +82,11 @@
     "    prototype_factory,\n",
     "    {\n",
     "        BeamlimeLogger: sc.get_logger(),\n",
-    "        DataFeedingSpeed: DataFeedingSpeed(1),\n",
+    "        DataFeedingSpeed: DataFeedingSpeed(0.1),\n",
     "        EventRate: EventRate(10_000),\n",
     "        NumPixels: NumPixels(10_000),\n",
     "        NumFrames: NumFrames(140),\n",
-    "        Workflow: Workflow('dummy'),\n",
+    "        ImagePath: ImagePath(pathlib.Path('./beamlime_plot.png')),\n",
     "    },\n",
     "):\n",
     "    prototype_factory[BeamlimeLogger].setLevel(logging.INFO)\n",
@@ -120,9 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plopp.widgets import Box, HBar\n",
-    "\n",
-    "Box(HBar(list(plot_saver.figures.values())))"
+    "next(iter(plot_saver.figures.values()))"
    ]
   }
  ],
@@ -142,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
