--- a/docs/user-guide/live_data_reduction.ipynb
+++ b/docs/user-guide/live_data_reduction.ipynb
@@ -52,7 +52,6 @@
    "source": [
     "from beamlime.constructors import multiple_constant_providers, SingletonProvider\n",
     "from beamlime.applications.handlers import (\n",
-    "    ImagePath,\n",
     "    DataReductionHandler,\n",
     "    RawDataSent,\n",
     "    WorkflowResultUpdate,\n",
@@ -68,9 +67,10 @@
     "    NumFrames,\n",
     "    DataFeedingSpeed,\n",
     ")\n",
+    "from beamlime.stateless_workflow import Workflow\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
-    "import logging, pathlib\n",
+    "import logging\n",
     "\n",
     "prototype_factory = default_prototype_factory()\n",
     "# Replace the default data reduction handler provider with a singleton provider.\n",
@@ -86,7 +86,7 @@
     "        EventRate: EventRate(10_000),\n",
     "        NumPixels: NumPixels(10_000),\n",
     "        NumFrames: NumFrames(140),\n",
-    "        ImagePath: ImagePath(pathlib.Path('./beamlime_plot.png')),\n",
+    "        Workflow: Workflow('dummy'),\n",
     "    },\n",
     "):\n",
     "    prototype_factory[BeamlimeLogger].setLevel(logging.INFO)\n",
@@ -111,7 +111,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "next(iter(plot_saver.figures.values()))"
+    "from plopp.widgets import Box, HBar\n",
+    "\n",
+    "Box(HBar(list(plot_saver.figures.values())))"
    ]
   }
  ],
@@ -131,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
