Update live data reduction documentation.

--- a/docs/user-guide/live_data_reduction.ipynb
+++ b/docs/user-guide/live_data_reduction.ipynb
@@ -56,7 +56,7 @@
     "    WorkflowResultUpdate,\n",
     "    PlotStreamer,\n",
     ")\n",
-    "from beamlime.applications.daemons import DetectorDataReceived, KafkaListenerSimulator, NexusTemplatePath\n",
+    "from beamlime.applications.daemons import DetectorDataReceived, KafkaStreamSimulator, NexusTemplatePath\n",
     "from beamlime.applications.base import Application\n",
     "from beamlime.executables.prototypes import default_prototype_factory\n",
     "from beamlime.logging import BeamlimeLogger\n",
@@ -99,7 +99,7 @@
     "    data_reduction_handler = prototype_factory[DataReductionHandler]\n",
     "    app.register_handling_method(DetectorDataReceived, data_reduction_handler.process_message)\n",
     "    # Register Daemons\n",
-    "    app.register_daemon(prototype_factory[KafkaListenerSimulator])\n",
+    "    app.register_daemon(prototype_factory[KafkaStreamSimulator])\n",
     "\n",
     "    app.run()\n",
     "    plt.close()  # Close the plot from this cell."
