Update nexus template with event data.

--- a/docs/user-guide/live_data_reduction.ipynb
+++ b/docs/user-guide/live_data_reduction.ipynb
@@ -55,8 +55,14 @@
     "    DataReductionHandler,\n",
     "    WorkflowResultUpdate,\n",
     "    PlotStreamer,\n",
+    "    DetectorDataReceived,\n",
     ")\n",
-    "from beamlime.applications.daemons import DetectorDataReceived, FakeListener, NexusTemplatePath\n",
+    "from beamlime.applications.daemons import (\n",
+    "    DetectorDataReceived,\n",
+    "    FakeListener,\n",
+    "    NexusTemplatePath,\n",
+    "    RunStart,\n",
+    ")\n",
     "from beamlime.applications.base import Application\n",
     "from beamlime.executables.prototypes import default_prototype_factory\n",
     "from beamlime.logging import BeamlimeLogger\n",
@@ -97,6 +103,7 @@
     "    plot_saver = prototype_factory[PlotStreamer]\n",
     "    app.register_handling_method(WorkflowResultUpdate, plot_saver.update_histogram)\n",
     "    data_reduction_handler = prototype_factory[DataReductionHandler]\n",
+    "    app.register_handling_method(RunStart, data_reduction_handler.update_nexus_template)\n",
     "    app.register_handling_method(DetectorDataReceived, data_reduction_handler.process_message)\n",
     "    # Register Daemons\n",
     "    app.register_daemon(prototype_factory[FakeListener])\n",
