Update option parsing.

--- a/docs/user-guide/live_data_reduction.ipynb
+++ b/docs/user-guide/live_data_reduction.ipynb
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from beamlime.constructors import multiple_constant_providers, SingletonProvider\n",
+    "from beamlime.constructors import SingletonProvider, Factory, multiple_constant_providers\n",
     "from beamlime.applications.handlers import (\n",
     "    DataReductionHandler,\n",
     "    WorkflowResultUpdate,\n",
@@ -64,44 +64,38 @@
     "    RunStart,\n",
     ")\n",
     "from beamlime.applications.base import Application\n",
-    "from beamlime.executables.prototypes import default_prototype_factory\n",
+    "from beamlime.executables.prototypes import collect_default_providers\n",
     "from beamlime.logging import BeamlimeLogger\n",
-    "from beamlime.applications._parameters import (\n",
-    "    EventRate,\n",
-    "    NumPixels,\n",
-    "    NumFrames,\n",
-    "    DataFeedingSpeed,\n",
-    ")\n",
+    "from beamlime.applications._parameters import NumFrames, DataFeedingSpeed\n",
     "from beamlime.stateless_workflow import Workflow\n",
-    "from matplotlib import pyplot as plt\n",
     "\n",
-    "import logging\n",
-    "\n",
-    "prototype_factory = default_prototype_factory()\n",
-    "# Replace the default data reduction handler provider with a singleton provider.\n",
-    "# So that we can access to the figure that it is using to plot the histogram.\n",
-    "prototype_factory.providers.pop(PlotStreamer)  # Remove the default handler.\n",
+    "# Build Factory\n",
+    "prototype_factory = Factory(collect_default_providers())\n",
+    "prototype_factory.providers[FakeListener] = FakeListener\n",
     "prototype_factory.providers[PlotStreamer] = SingletonProvider(PlotStreamer)\n",
-    "\n",
-    "with multiple_constant_providers(\n",
-    "    prototype_factory,\n",
-    "    {\n",
-    "        BeamlimeLogger: sc.get_logger(),\n",
-    "        DataFeedingSpeed: DataFeedingSpeed(1/14),\n",
-    "        EventRate: EventRate(10_000),\n",
-    "        NumPixels: NumPixels(10_000),\n",
-    "        NumFrames: NumFrames(5),\n",
-    "        Workflow: Workflow('dummy'),\n",
-    "        NexusTemplatePath: NexusTemplatePath('../../tests/applications/ymir.json')\n",
-    "    },\n",
-    "):\n",
-    "    prototype_factory[BeamlimeLogger].setLevel(logging.INFO)\n",
-    "\n",
+    "parameters = {\n",
+    "    BeamlimeLogger: sc.get_logger(),\n",
+    "    DataFeedingSpeed: DataFeedingSpeed(1/14),\n",
+    "    NumFrames: NumFrames(5),\n",
+    "    Workflow: Workflow('dummy'),\n",
+    "    NexusTemplatePath: NexusTemplatePath('../../tests/applications/ymir.json')\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib import pyplot as plt\n",
+    "with multiple_constant_providers(prototype_factory, parameters):\n",
     "    # Build the application\n",
+    "    prototype_factory[BeamlimeLogger].setLevel(\"INFO\")\n",
     "    app = prototype_factory[Application]\n",
     "    # Register Handlers\n",
-    "    plot_saver = prototype_factory[PlotStreamer]\n",
-    "    app.register_handling_method(WorkflowResultUpdate, plot_saver.update_histogram)\n",
+    "    plot_streamer = prototype_factory[PlotStreamer]\n",
+    "    app.register_handling_method(WorkflowResultUpdate, plot_streamer.update_histogram)\n",
     "    data_reduction_handler = prototype_factory[DataReductionHandler]\n",
     "    app.register_handling_method(RunStart, data_reduction_handler.update_nexus_template)\n",
     "    app.register_handling_method(DetectorDataReceived, data_reduction_handler.process_message)\n",
@@ -120,7 +114,7 @@
    "source": [
     "from plopp.widgets import Box, HBar\n",
     "\n",
-    "Box(HBar(list(plot_saver.figures.values())))"
+    "Box(HBar(list(plot_streamer.figures.values())))"
    ]
   }
  ],
