--- a/docs/user-guide/live_data_reduction.ipynb
+++ b/docs/user-guide/live_data_reduction.ipynb
@@ -50,31 +50,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from beamlime.constructors import multiple_constant_providers, SingletonProvider\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "from beamlime.constructors import multiple_constant_providers, SingletonProvider, Factory\n",
+    "from beamlime.logging import BeamlimeLogger\n",
+    "\n",
+    "from beamlime.executables.prototypes import collect_default_providers\n",
+    "from beamlime.applications.base import Application\n",
     "from beamlime.applications.handlers import (\n",
     "    DataReductionHandler,\n",
     "    WorkflowResultUpdate,\n",
     "    PlotStreamer,\n",
     ")\n",
     "from beamlime.applications.daemons import DetectorDataReceived, FakeListener, NexusTemplatePath\n",
-    "from beamlime.applications.base import Application\n",
-    "from beamlime.executables.prototypes import default_prototype_factory\n",
-    "from beamlime.logging import BeamlimeLogger\n",
-    "from beamlime.applications._parameters import (\n",
-    "    EventRate,\n",
-    "    NumPixels,\n",
-    "    NumFrames,\n",
-    "    DataFeedingSpeed,\n",
-    ")\n",
+    "from beamlime.applications.daemons import NumFrames, DataFeedingSpeed, FakeListener\n",
     "from beamlime.stateless_workflow import Workflow\n",
-    "from matplotlib import pyplot as plt\n",
     "\n",
-    "import logging\n",
     "\n",
-    "prototype_factory = default_prototype_factory()\n",
-    "# Replace the default data reduction handler provider with a singleton provider.\n",
-    "# So that we can access to the figure that it is using to plot the histogram.\n",
-    "prototype_factory.providers.pop(PlotStreamer)  # Remove the default handler.\n",
+    "prototype_factory = Factory(collect_default_providers())\n",
+    "prototype_factory.providers[FakeListener] = SingletonProvider(FakeListener)\n",
     "prototype_factory.providers[PlotStreamer] = SingletonProvider(PlotStreamer)\n",
     "\n",
     "with multiple_constant_providers(\n",
@@ -82,14 +76,12 @@
     "    {\n",
     "        BeamlimeLogger: sc.get_logger(),\n",
     "        DataFeedingSpeed: DataFeedingSpeed(1/14),\n",
-    "        EventRate: EventRate(10_000),\n",
-    "        NumPixels: NumPixels(10_000),\n",
     "        NumFrames: NumFrames(5),\n",
     "        Workflow: Workflow('dummy'),\n",
     "        NexusTemplatePath: NexusTemplatePath('../../tests/applications/ymir.json')\n",
     "    },\n",
     "):\n",
-    "    prototype_factory[BeamlimeLogger].setLevel(logging.INFO)\n",
+    "    prototype_factory[BeamlimeLogger].setLevel(\"INFO\")\n",
     "\n",
     "    # Build the application\n",
     "    app = prototype_factory[Application]\n",
