--- a/docs/user-guide/live_data_reduction.ipynb
+++ b/docs/user-guide/live_data_reduction.ipynb
@@ -62,8 +62,11 @@
     "    WorkflowResultUpdate,\n",
     "    PlotStreamer,\n",
     ")\n",
-    "from beamlime.applications.daemons import DetectorDataReceived, FakeListener, NexusTemplatePath\n",
-    "from beamlime.applications.daemons import NumFrames, DataFeedingSpeed, FakeListener\n",
+    "from beamlime.applications.daemons import (\n",
+    "    DetectorDataReceived, FakeListener, NexusTemplatePath,\n",
+    "    NumFrames, DataFeedingSpeed, FakeListener,\n",
+    "    EventRate, FrameRate,\n",
+    ")\n",
     "from beamlime.stateless_workflow import Workflow\n",
     "\n",
     "\n",
@@ -77,6 +80,8 @@
     "        BeamlimeLogger: sc.get_logger(),\n",
     "        DataFeedingSpeed: DataFeedingSpeed(1/14),\n",
     "        NumFrames: NumFrames(5),\n",
+    "        EventRate: EventRate(10_000),\n",
+    "        FrameRate: FrameRate(14),\n",
     "        Workflow: Workflow('dummy'),\n",
     "        NexusTemplatePath: NexusTemplatePath('../../tests/applications/ymir.json')\n",
     "    },\n",
