Add modular data assembling handler.

--- a/docs/user-guide/live_data_reduction.ipynb
+++ b/docs/user-guide/live_data_reduction.ipynb
@@ -61,11 +61,13 @@
     "    DataReductionHandler,\n",
     "    WorkflowResultUpdate,\n",
     "    PlotStreamer,\n",
+    "    DataAssembler,\n",
+    "    DataReady,\n",
     ")\n",
     "from beamlime.applications.daemons import (\n",
     "    DetectorDataReceived, FakeListener, NexusTemplatePath,\n",
     "    NumFrames, DataFeedingSpeed, FakeListener,\n",
-    "    EventRate, FrameRate,\n",
+    "    EventRate, FrameRate, RunStart\n",
     ")\n",
     "from beamlime.stateless_workflow import Workflow\n",
     "\n",
@@ -93,8 +95,11 @@
     "    # Register Handlers\n",
     "    plot_saver = prototype_factory[PlotStreamer]\n",
     "    app.register_handling_method(WorkflowResultUpdate, plot_saver.update_histogram)\n",
+    "    data_assembler = prototype_factory[DataAssembler]\n",
+    "    app.register_handling_method(RunStart, data_assembler.set_run_start)\n",
+    "    app.register_handling_method(DetectorDataReceived, data_assembler.assemble_detector_data)\n",
     "    data_reduction_handler = prototype_factory[DataReductionHandler]\n",
-    "    app.register_handling_method(DetectorDataReceived, data_reduction_handler.process_message)\n",
+    "    app.register_handling_method(DataReady, data_reduction_handler.reduce_data)\n",
     "    # Register Daemons\n",
     "    app.register_daemon(prototype_factory[FakeListener])\n",
     "\n",
