--- a/docs/user-guide/getting-started.ipynb
+++ b/docs/user-guide/getting-started.ipynb
@@ -21,7 +21,8 @@
    "source": [
     "!beamlime \\\n",
     "    --workflow dummy \\\n",
-    "    --image-path reduction-result"
+    "    --nexus-template-path ../../tests/applications/ymir.json \\\n",
+    "    --image-path-prefix reduction-result"
    ]
   },
   {
@@ -98,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
