Update visualising handlers to combine all figures into one image.

--- a/docs/user-guide/live_data_reduction.ipynb
+++ b/docs/user-guide/live_data_reduction.ipynb
@@ -81,7 +81,7 @@
     "    prototype_factory,\n",
     "    {\n",
     "        BeamlimeLogger: sc.get_logger(),\n",
-    "        DataFeedingSpeed: DataFeedingSpeed(1/14),\n",
+    "        DataFeedingSpeed: DataFeedingSpeed(0.3),\n",
     "        NumFrames: NumFrames(5),\n",
     "        EventRate: EventRate(10_000),\n",
     "        FrameRate: FrameRate(14),\n",
@@ -114,9 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plopp.widgets import Box, HBar\n",
-    "\n",
-    "Box(HBar(list(plot_saver.figures.values())))"
+    "plot_saver.show()"
    ]
   }
  ],
