--- a/docs/user-guide/live_data_reduction.ipynb
+++ b/docs/user-guide/live_data_reduction.ipynb
@@ -75,7 +75,7 @@
     "prototype_factory = Factory(collect_default_providers())\n",
     "prototype_factory.providers[FakeListener] = SingletonProvider(FakeListener)\n",
     "prototype_factory.providers[PlotStreamer] = SingletonProvider(PlotStreamer)\n",
-    "\n",
+    "prototype_factory.providers[DataAssembler] = DataAssembler\n",
     "\n",
     "with multiple_constant_providers(\n",
     "    prototype_factory,\n",
@@ -134,7 +134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
