--- a/docs/about/ess-instruments.ipynb
+++ b/docs/about/ess-instruments.ipynb
@@ -267,7 +267,7 @@
     "]\n",
     "\n",
     "mean_memory_comparison.coords[\"label\"] = sc.array(\n",
-    "    dims=[\"num_pixels_event_rate\"], values=[i for i in range(len(x_tick_labels))]\n",
+    "    dims=[\"num_pixels_event_rate\"], values=list(range(len(x_tick_labels)))\n",
     ")\n",
     "\n",
     "standard_mem_speed = mean_memory_comparison[\"total_memory\", 0]\n",
@@ -298,7 +298,7 @@
     "    \"difference=100*(speed-standard_speed)/standard_speed, with standard speed: 67 GB\",\n",
     "]\n",
     "\n",
-    "memory_comparison_line_plot.ax.set_xticks([i for i in range(len(x_tick_labels))])\n",
+    "memory_comparison_line_plot.ax.set_xticks(list(range(len(x_tick_labels))))\n",
     "memory_comparison_line_plot.ax.set_xticklabels(x_tick_labels)\n",
     "memory_comparison_line_plot.ax.text(-1, 24, \"\\n\".join(meta_mem_comparison))\n",
     "memory_comparison_line_plot.ax.legend(loc=\"lower left\", title=\"Memory Size [GB]\")"
@@ -345,7 +345,7 @@
     "mean_cpu_comparison = sample_mean_per_bin(cpu_comparison)\n",
     "mean_cpu_comparison.variances = sample_variance_per_bin(cpu_comparison).values\n",
     "mean_cpu_comparison.coords[\"label\"] = sc.array(\n",
-    "    dims=[\"num_pixels_event_rate\"], values=[i for i in range(len(x_tick_labels))]\n",
+    "    dims=[\"num_pixels_event_rate\"], values=list(range(len(x_tick_labels)))\n",
     ")\n",
     "\n",
     "standard_cpu_speed = mean_cpu_comparison[\"cpu_cores\", 0]\n",
@@ -376,7 +376,7 @@
     "    f\"{df_cpu_comparison['num_frames [counts]'].max()}] frames \",\n",
     "]\n",
     "\n",
-    "cpu_comparison_line_plot.ax.set_xticks([i for i in range(len(x_tick_labels))])\n",
+    "cpu_comparison_line_plot.ax.set_xticks(list(range(len(x_tick_labels))))\n",
     "cpu_comparison_line_plot.ax.set_xticklabels(x_tick_labels)\n",
     "cpu_comparison_line_plot.ax.text(-1, 900, \"\\n\".join(meta_cpu_comparison))\n",
     "cpu_comparison_line_plot.ax.legend(loc=\"lower left\", title=\"CPU Cores\")"
