--- a/docs/about/ess-instruments.ipynb
+++ b/docs/about/ess-instruments.ipynb
@@ -263,6 +263,7 @@
     "    for er, npx in zip(\n",
     "        mean_memory_comparison.coords[\"event_rate\"].values,\n",
     "        mean_memory_comparison.coords[\"num_pixels\"].values,\n",
+    "        strict=True,\n",
     "    )\n",
     "]\n",
     "\n",
@@ -285,7 +286,7 @@
     "    grid=True,\n",
     ")\n",
     "\n",
-    "for i_line, line_name in zip([0, 2], lines_per_memory.keys()):\n",
+    "for i_line, line_name in zip([0, 2], lines_per_memory.keys(), strict=True):\n",
     "    memory_comparison_line_plot.ax.lines[i_line].set_label(line_name)\n",
     "\n",
     "df_mem_comparison = df[df[\"cpu_cores\"] == 6].reset_index(drop=True)\n",
