--- a/docs/developer/benchmark.ipynb
+++ b/docs/developer/benchmark.ipynb
@@ -34,7 +34,8 @@
    },
    "outputs": [],
    "source": [
-    "import sys, os\n",
+    "import sys\n",
+    "import os\n",
     "\n",
     "sys.path.insert(0, os.path.abspath('../../tests/helpers/'))  # To use ``tests`` as a package.\n",
     "                                                             # This path is already included in ``pyproject.toml``."
