--- a/docs/user-guide/live_data_reduction.ipynb
+++ b/docs/user-guide/live_data_reduction.ipynb
@@ -66,7 +66,7 @@
     ")\n",
     "from beamlime.applications.daemons import (\n",
     "    DetectorDataReceived, FakeListener, NexusTemplatePath,\n",
-    "    NumFrames, DataFeedingSpeed, FakeListener,\n",
+    "    NumFrames, DataFeedingSpeed,\n",
     "    EventRate, FrameRate, RunStart\n",
     ")\n",
     "from beamlime.stateless_workflow import Workflow\n",
