--- a/docs/developer/benchmark.ipynb
+++ b/docs/developer/benchmark.ipynb
@@ -98,7 +98,7 @@
     "    from time import sleep\n",
     "    import random\n",
     "    sleep(x)\n",
-    "    sleep(random.random()*0.1)\n",
+    "    sleep(random.random()*0.1)  # noqa: S311\n",
     "\n",
     "    return x\n",
     "\n",
