Update image file path.

--- a/docs/user-guide/getting-started.ipynb
+++ b/docs/user-guide/getting-started.ipynb
@@ -29,9 +29,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The dummy workflow returns a single result named \"random-counts\", which is added as a suffix to the output file name:\n",
+    "The dummy workflow returns a single result named \"reduction-result.png\", which is added as a suffix to the output file name:\n",
     "\n",
-    "![Plot of reduction result](reduction-result-random-counts.png)"
+    "![Plot of reduction result](reduction-result.png)"
    ]
   },
   {
