Fix UP* errors.

--- a/docs/developer/benchmark.ipynb
+++ b/docs/developer/benchmark.ipynb
@@ -203,7 +203,7 @@
    "outputs": [],
    "source": [
     "from tests.benchmarks.runner import BenchmarkRunner, SingleRunReport, TimeMeasurement, BenchmarkResult, BenchmarkTargetName\n",
-    "from typing import Callable, Optional\n",
+    "from collections.abc import Callable\n",
     "from dataclasses import dataclass\n",
     "\n",
     "@dataclass\n",
@@ -215,7 +215,7 @@
     "# Extended benchmark result container.\n",
     "@dataclass\n",
     "class TimeItBenchmarkResult(BenchmarkResult):\n",
-    "    iterations: Optional[Iterations] = None\n",
+    "    iterations: Iterations | None = None\n",
     "\n",
     "\n",
     "# Customized benchmark runner.\n",
@@ -710,7 +710,6 @@
    "outputs": [],
    "source": [
     "from tests.benchmarks.environments import CPUSpec, BenchmarkEnvironment\n",
-    "from typing import Optional\n",
     "\n",
     "# 1. Annotate the field as ``Optional`` and remove the provider.\n",
     "\n",
@@ -720,7 +719,7 @@
     "\n",
     "@dataclass\n",
     "class LessHardwareSpec(HardwareSpec):\n",
-    "    cpu_spec: Optional[CPUSpec] = None\n",
+    "    cpu_spec: CPUSpec | None = None\n",
     "\n",
     "\n",
     "optional_env_providers.pop(HardwareSpec)\n",
