Use sc.arange instead of range

--- a/docs/about/ess-instruments.ipynb
+++ b/docs/about/ess-instruments.ipynb
@@ -267,10 +267,9 @@
     "    )\n",
     "]\n",
     "\n",
-    "mean_memory_comparison.coords[\"label\"] = sc.array(\n",
-    "    dims=[\"num_pixels_event_rate\"], values=list(range(len(x_tick_labels)))\n",
+    "mean_memory_comparison.coords[\"label\"] = sc.arange(\n",
+    "    \"num_pixels_event_rate\", len(x_tick_labels)\n",
     ")\n",
-    "\n",
     "standard_mem_speed = mean_memory_comparison[\"total_memory\", 0]\n",
     "lines_per_memory = {\n",
     "    f\"{mem.value} [{mem.unit}]\": difference(\n",
@@ -345,8 +344,8 @@
     "cpu_comparison = cpu_da.flatten((\"num_pixels\", \"event_rate\"), \"num_pixels_event_rate\")\n",
     "mean_cpu_comparison = sample_mean_per_bin(cpu_comparison)\n",
     "mean_cpu_comparison.variances = sample_variance_per_bin(cpu_comparison).values\n",
-    "mean_cpu_comparison.coords[\"label\"] = sc.array(\n",
-    "    dims=[\"num_pixels_event_rate\"], values=list(range(len(x_tick_labels)))\n",
+    "mean_cpu_comparison.coords[\"label\"] = sc.arange(\n",
+    "    \"num_pixels_event_rate\", len(x_tick_labels)\n",
     ")\n",
     "\n",
     "standard_cpu_speed = mean_cpu_comparison[\"cpu_cores\", 0]\n",
@@ -410,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
